Add keywords to composer.json

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,11 @@
     "keywords": [
         "laravel",
         "nova",
+        "image",
+        "crop",
+        "resize",
+        "image crop",
+        "image resize",
         "advanced",
         "advanced image",
         "advanced image field"
