--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ctessier/nova-advanced-image-field",
-    "description": "An advanced image field for Nova.",
+    "description": "An advanced image field for Nova with crop and resize.",
     "keywords": [
         "laravel",
         "nova",
