--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "php": ">=7.1.0",
         "intervention/image": "^2.4"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
+    },
     "autoload": {
         "psr-4": {
             "Ctessier\\NovaAdvancedImageField\\": "src/"
