--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --no-interaction --prefer-source
-  - npm install --only=production
+  - npm install
   - npm run production
 script:
   - vendor/bin/phpunit --coverage-clover=coverage.xml
