--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.21",
         "postcss": "^8.3.11",
+        "vue-advanced-cropper": "^2.8.6",
+        "vue-cropperjs": "^5.0.0",
         "vue-loader": "^16.8.3",
         "vuex": "^4.1.0"
-    },
-    "dependencies": {
-        "vue-cropperjs": "^5.0.0"
     }
 }
